--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Downloading: 100%|██████████| 8.15M/8.15M [00:00<00:00, 47.0MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the executable path and initialize Splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
@@ -732,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,31 +800,26 @@
     "# 2. Create a list to hold the images and titles.\n",
     "hemisphere_image_urls = []\n",
     "\n",
-    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "    # 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
     "for hem in range(4):\n",
-    "    browser.links.find_by_partial_text('Hemisphere')[hem].click()\n",
+    "        browser.links.find_by_partial_text('Hemisphere Enhanced')[hem].click()    \n",
+    "        # Parse the HTML\n",
+    "        html = browser.html\n",
+    "        hem_soup = soup(html,'html.parser')\n",
+    "            \n",
+    "        # Scraping\n",
+    "        img_url = hem_soup.find(\"a\", text=\"Sample\").get(\"href\")\n",
+    "        title =  hem_soup.find(\"h2\", class_=\"title\").get_text()\n",
     "\n",
-    "        \n",
-    "    # Parse the HTML\n",
-    "    html = browser.html\n",
-    "    hem_soup = soup(html,'html.parser')\n",
-    "        \n",
-    "    # Scraping\n",
-    "    img_url = hem_soup.find(\"a\", text=\"Sample\").get(\"href\")\n",
-    "    title =  hem_soup.find(\"h2\", class_=\"title\").get_text()\n",
-    "\n",
-    "    #title = hem_soup.find('a', class_='itemLink').text\n",
-    "    #img_url = hem_soup.find('a').get('item')\n",
-    "        \n",
-    "    # Store findings into a dictionary and append to list\n",
-    "    hemispheres = {}\n",
-    "    hemi_dict = {'img_url': img_url,'title': title}\n",
-    "    hemisphere_image_urls.append(hemi_dict)\n",
-    "    browser.back()\n",
-    "   \n",
-    "\n",
-    "    \n",
-    "    "
+    "        #title = hem_soup.find('a', class_='itemLink').text\n",
+    "        #img_url = hem_soup.find('a').get('item')\n",
+    "            \n",
+    "        # Store findings into a dictionary and append to list\n",
+    "        hemi_dict = {}\n",
+    "        hemi_dict = {'img_url': img_url,'title': title}\n",
+    "        hemisphere_image_urls.append(hemi_dict)\n",
+    "        browser.back()\n",
+    "        "
    ]
   },
   {
